--- a/content/courses/economics/1-documents.html
+++ b/content/courses/economics/1-documents.html
@@ -1,6 +1,6 @@
 ---
-title: Önemli Dokümanlar
-linktitle: Dokümanlar
+title: Important Documents
+linktitle: Documents
 date: "2020-10-05"
 lastmod: "2020-10-13"
 draft: false
@@ -8,8 +8,8 @@ draft: false
 type: docs
 
 menu:
-  ekonomi-i:
-    name: Dokümanlar
+  economics:
+    name: Documents
     weight: 20
 
 # Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
