--- a/content/courses/ekonometri-i/1-documents.html
+++ b/content/courses/ekonometri-i/1-documents.html
@@ -21,5 +21,5 @@ weight: 20
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Bölümünüzü ilgilendiren önemli dokümanlara yanda bulunan bölümünüze ait linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere yan taraftaki linklere tıklayarak ulaşabilirsiniz….
+İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Bölümünüzü ilgilendiren önemli dokümanlara bölümünüze ait yandaki linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere yan taraftaki linklere tıklayarak ulaşabilirsiniz…
 {{% /alert %}}</p>
