--- a/content/courses/ekonomi-i/01-st.html
+++ b/content/courses/ekonomi-i/01-st.html
@@ -10,10 +10,10 @@ type: docs
 menu:
   ekonomi-i:
     parent: Dokümanlar
-    weight: 20
+    weight: 21
 
 # Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
-weight: 20
+weight: 21
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
@@ -24,8 +24,7 @@ weight: 20
 <h2>Telegram Kanalı</h2>
 <p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I_Telegram%20Kanali%20Duyurusu_Bilgilendirme.pdf">Telegram Kanalı Duyurusu</a><br />
-</li>
+<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I_Telegram%20Kanali%20Duyurusu_Bilgilendirme.pdf">Telegram Kanalı Duyurusu</a></li>
 <li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I_Telegram%20Kanali%20Duyurusu_Ilan.pdf">QR Kod - Telefon İçin</a></li>
 </ul>
 </div>
@@ -46,8 +45,7 @@ weight: 20
 <div id="ders-değerlendirme-anketi" class="section level2">
 <h2>Ders Değerlendirme Anketi</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonmiye%20Giris_I_Ders%20Degerlendirme%20Anketi.pdf">Ders Değerlendirme Anketi - Açıklama</a><br />
-</li>
+<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonmiye%20Giris_I_Ders%20Degerlendirme%20Anketi.pdf">Ders Değerlendirme Anketi - Açıklama</a></li>
 <li><a href="https://forms.gle/sxp48WjRcgq8yrv66">Ders Değerlendirme Anketi - Link</a></li>
 </ul>
 </div>
