--- a/content/courses/ekonometri-i/01-ec.html
+++ b/content/courses/ekonometri-i/01-ec.html
@@ -10,10 +10,10 @@ type: docs
 menu:
   ekonometri-i:
     parent: Dokümanlar
-    weight: 20
+    weight: 21
 
 # Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
-weight: 20
+weight: 21
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
@@ -24,16 +24,14 @@ weight: 20
 <h2>Telegram Kanalı</h2>
 <p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_Telegram%20Kanali%20Duyurusu_Bilgilendirme.pdf">Telegram Kanalı Duyurusu</a><br />
-</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_Telegram%20Kanali%20Duyurusu_Bilgilendirme.pdf">Telegram Kanalı Duyurusu</a></li>
 <li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_Telegram%20Kanali%20Duyurusu_Ilan.pdf">QR Kod - Telefon İçin</a></li>
 </ul>
 </div>
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı - 1. Öğretim</a><br />
-</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı - 1. Öğretim</a></li>
 <li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı - 2. Öğretim</a></li>
 </ul>
 </div>
@@ -46,8 +44,7 @@ weight: 20
 <div id="ders-değerlendirme-anketi" class="section level2">
 <h2>Ders Değerlendirme Anketi</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_Ders%20Degerlendirme%20Anketi.pdf">Ders Değerlendirme Anketi - Açıklama</a><br />
-</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_Ders%20Degerlendirme%20Anketi.pdf">Ders Değerlendirme Anketi - Açıklama</a></li>
 <li><a href="https://forms.gle/VsT9jjtGospV7DKe8">Ders Değerlendirme Anketi - Link</a></li>
 </ul>
 </div>
