--- a/content/courses/ekonometri-i/_index.html
+++ b/content/courses/ekonometri-i/_index.html
@@ -1,8 +1,8 @@
 ---
 # Course title, summary, and position.
 linktitle: "Ekonometri I"
-summary: "Verildiği son bölüm ve dönem: İktisat Bölümü - Güz 2020"
-weight: 30
+summary: "Verildiği son bölüm ve dönem: İktisat - Güz 2020"
+weight: 10
 
 # Page metadata.
 title: "Ekonometri I"
