--- a/content/courses/economics/4-lectures.html
+++ b/content/courses/economics/4-lectures.html
@@ -28,34 +28,34 @@ weight: 50
 <table>
 <thead>
 <tr class="header">
-<th align="center">      Türkçe 🇹🇷      </th>
-<th align="center">      İngilizce 🇺🇸      </th>
+<th align="left">Türkçe 🇹🇷</th>
+<th align="left">İngilizce 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="center"><a href="https://www.youtube.com/watch?v=2X_-CiNAr6w&amp;feature=youtu.be">Video - Bölüm #1</a></td>
-<td align="center"><a href="https://www.youtube.com/watch?v=rEZfMve6Vm0&amp;feature=youtu.be">Video - Bölüm #1</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=2X_-CiNAr6w&amp;feature=youtu.be">Video - Bölüm #1</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=rEZfMve6Vm0&amp;feature=youtu.be">Video - Bölüm #1</a></td>
 </tr>
 <tr class="even">
-<td align="center"><a href="https://www.youtube.com/watch?v=jeNwjaAVs4o&amp;feature=youtu.be">Video - Bölüm #2</a></td>
-<td align="center"><a href="https://www.youtube.com/watch?v=1wAclMe5c6M&amp;feature=youtu.be">Video - Bölüm #2</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=jeNwjaAVs4o&amp;feature=youtu.be">Video - Bölüm #2</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=1wAclMe5c6M&amp;feature=youtu.be">Video - Bölüm #2</a></td>
 </tr>
 <tr class="odd">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20(Kara).pptx">Slaytlar</a></td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slaytlar</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20(Kara).pptx">Slaytlar</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slaytlar</a></td>
 </tr>
 <tr class="even">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notlar</a> 🔄</td>
 </tr>
 <tr class="odd">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
 </tr>
 <tr class="even">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
 </tr>
 </tbody>
 </table>
