--- a/content/courses/economics/01-ce.html
+++ b/content/courses/economics/01-ce.html
@@ -20,31 +20,31 @@ weight: 21
 
 
 <p><br></p>
-<div id="telegram-kanalı" class="section level2">
-<h2>Telegram Kanalı</h2>
-<p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
+<div id="telegram-channel" class="section level2">
+<h2>Telegram Channel</h2>
+<p>To inform you about the important announcements related to the course on time, an announcement channel is created in the <a href="https://telegram.org/">Telegram</a> app. The detailed information can be found on documents below.</p>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Info.pdf">Telegram Kanalı Duyurusu</a></li>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Flyer.pdf">QR Kod - Telefon İçin</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Info.pdf">Telegram Channel Announcement</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Flyer.pdf">QR Code - For Phones</a></li>
 </ul>
 </div>
-<div id="ders-planı-ve-önemli-günler" class="section level2">
-<h2>Ders Planı ve Önemli Günler</h2>
+<div id="syllabus-and-important-dates" class="section level2">
+<h2>Syllabus and Important Dates</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Syllabus%20(Kara).pdf">Ders Planı</a></li>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Important%20Dates%20(Kara).pdf">Önemli Günler</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Syllabus%20(Kara).pdf">Syllabus</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a></li>
 </ul>
 </div>
-<div id="ders-kitabı" class="section level2">
-<h2>Ders Kitabı</h2>
+<div id="course-book" class="section level2">
+<h2>Course Book</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/Economics_Book%20Selection%20Explanation.pdf">Kitap Seçimi Açıklaması</a></li>
+<li><a href="../../../repo/akek/courses/economics/Economics_Book%20Selection%20Explanation.pdf">Book Selection Explanation</a></li>
 </ul>
 </div>
-<div id="ders-değerlendirme-anketi" class="section level2">
-<h2>Ders Değerlendirme Anketi</h2>
+<div id="course-evaluation-survey" class="section level2">
+<h2>Course Evaluation Survey</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics_Course%20Evaluation%20Survey.pdf">Ders Değerlendirme Anketi - Açıklama</a></li>
-<li><a href="https://forms.gle/ZfxYYKNxbVcyLaQB8">Ders Değerlendirme Anketi - Link</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_Course%20Evaluation%20Survey.pdf">Course Evaluation Survey - Explanation (in Turkish)</a></li>
+<li><a href="https://forms.gle/ZfxYYKNxbVcyLaQB8">Course Evaluation Survey - Link (in Turkish)</a></li>
 </ul>
 </div>
