--- a/content/courses/ekonomi/2-links.html
+++ b/content/courses/ekonomi/2-links.html
@@ -21,36 +21,36 @@ weight: 30
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz sayfada 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
 {{% /alert %}}</p>
 <div id="akademi-ekonometri" class="section level2">
 <h2>Akademi Ekonometri</h2>
 <ul>
-<li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonomi - Ders Videoları (YouTube Playlist)</a>
+<li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonomi - Ders Videoları (YouTube Playlist)</a> 🇹🇷
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Ders Videoları (YouTube Playlist, İngilizce)</a> 🔥</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Ders Videos (YouTube Playlist)</a> 🇺🇸🔥</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🔄
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Ders (YouTube Playlist, Türkçe)</a> 🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
 </ul></li>
 </ul>
 </div>
 <div id="online-ders" class="section level2">
 <h2>Online-Ders</h2>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🔥
+<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> ⛔</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
 </ul></li>
 </ul>
 </div>
 <div id="diğer-linkler" class="section level2">
 <h2>Diğer Linkler</h2>
 <ul>
-<li><a href="https://yokdersleri.yok.gov.tr/">YÖK Dersleri Platformu</a></li>
-<li><a href="https://acikders.tuba.gov.tr/">TÜBA Açık Ders Malzemeleri Portalı</a></li>
+<li><a href="https://yokdersleri.yok.gov.tr/">YÖK Dersleri Platformu</a> 🇹🇷</li>
+<li><a href="https://acikders.tuba.gov.tr/">TÜBA Açık Ders Malzemeleri Portalı</a> 🇹🇷</li>
 </ul>
 </div>
