--- a/content/courses/ekonomi/4-lectures.html
+++ b/content/courses/ekonomi/4-lectures.html
@@ -21,41 +21,41 @@ weight: 50
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz sayfada 🔄 <font color="red"><strong>Güncellenecek</strong></font> ve 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> içerikleri ifade eder…
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
 {{% /alert %}}</p>
 <div id="hafta-1" class="section level2">
 <h2>Hafta #1</h2>
 <table>
 <thead>
 <tr class="header">
-<th align="center">      Türkçe 🇹🇷      </th>
-<th align="center">      İngilizce 🇺🇸      </th>
+<th align="left">Türkçe 🇹🇷</th>
+<th align="left">İngilizce 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="center"><a href="https://www.youtube.com/watch?v=2X_-CiNAr6w&amp;feature=youtu.be">Video - Bölüm #1</a></td>
-<td align="center"><a href="https://www.youtube.com/watch?v=rEZfMve6Vm0&amp;feature=youtu.be">Video - Bölüm #1</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=2X_-CiNAr6w&amp;feature=youtu.be">Video - Bölüm #1</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=rEZfMve6Vm0&amp;feature=youtu.be">Video - Part #1</a></td>
 </tr>
 <tr class="even">
-<td align="center"><a href="https://www.youtube.com/watch?v=jeNwjaAVs4o&amp;feature=youtu.be">Video - Bölüm #2</a></td>
-<td align="center"><a href="https://www.youtube.com/watch?v=1wAclMe5c6M&amp;feature=youtu.be">Video - Bölüm #2</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=jeNwjaAVs4o&amp;feature=youtu.be">Video - Bölüm #2</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=1wAclMe5c6M&amp;feature=youtu.be">Video - Part #2</a></td>
 </tr>
 <tr class="odd">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20(Kara).pptx">Slaytlar</a></td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slaytlar</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20(Kara).pptx">Slaytlar</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slides</a></td>
 </tr>
 <tr class="even">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Nots</a> 🔄</td>
 </tr>
 <tr class="odd">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
 </tr>
 <tr class="even">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="center"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
 </tr>
 </tbody>
 </table>
