--- a/content/courses/economics/1-documents.html
+++ b/content/courses/economics/1-documents.html
@@ -21,5 +21,5 @@ weight: 20
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Bölümünüzü ilgilendiren önemli dokümanlara bölümünüze ait yandaki linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere yan taraftaki linklere tıklayarak ulaşabilirsiniz…
+The course you are reviewing may be given to more than one department. You can access important documents that concern you from the link of your department on the left-side of this page. You can also access other documents, links, videos, and information by clicking the links on the left-side…
 {{% /alert %}}</p>
