--- a/content/courses/economics/4-lectures.html
+++ b/content/courses/economics/4-lectures.html
@@ -21,10 +21,10 @@ weight: 50
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz sayfada 🔄 <font color="red"><strong>Güncellenecek</strong></font> ve 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> içerikleri ifade eder…
+On the page you are reviewing, the icons and the contents they refer are as follows: 🇹🇷 <font color="red"><strong>Turkish</strong></font>, 🇺🇸 <font color="red"><strong>English</strong></font>, 🔄 <font color="red"><strong>Will be Updated</strong></font>, 🔥 <font color="red"><strong>In Progress</strong></font>, and ⛔ <font color="red"><strong>No Longer Valid</strong></font>.
 {{% /alert %}}</p>
-<div id="hafta-1" class="section level2">
-<h2>Hafta #1</h2>
+<div id="week-1" class="section level2">
+<h2>Week #1</h2>
 <table>
 <thead>
 <tr class="header">
@@ -35,31 +35,31 @@ weight: 50
 <tbody>
 <tr class="odd">
 <td align="left"><a href="https://www.youtube.com/watch?v=2X_-CiNAr6w&amp;feature=youtu.be">Video - Bölüm #1</a></td>
-<td align="left"><a href="https://www.youtube.com/watch?v=rEZfMve6Vm0&amp;feature=youtu.be">Video - Bölüm #1</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=rEZfMve6Vm0&amp;feature=youtu.be">Video - Part #1</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="https://www.youtube.com/watch?v=jeNwjaAVs4o&amp;feature=youtu.be">Video - Bölüm #2</a></td>
-<td align="left"><a href="https://www.youtube.com/watch?v=1wAclMe5c6M&amp;feature=youtu.be">Video - Bölüm #2</a></td>
+<td align="left"><a href="https://www.youtube.com/watch?v=1wAclMe5c6M&amp;feature=youtu.be">Video - Part #2</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20(Kara).pptx">Slaytlar</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slaytlar</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slides</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Nots</a> 🔄</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
 </tr>
 </tbody>
 </table>
 </div>
-<div id="hafta-2" class="section level2">
-<h2>Hafta #2</h2>
+<div id="week-2" class="section level2">
+<h2>Week #2</h2>
 </div>
