--- a/content/courses/ekonomi/02-ie.html
+++ b/content/courses/ekonomi/02-ie.html
@@ -37,18 +37,18 @@ weight: 22
 <table>
 <thead>
 <tr class="header">
-<th align="center">1. Öğretim</th>
-<th align="center">2. Öğretim</th>
+<th align="left">1. Öğretim</th>
+<th align="left">2. Öğretim</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a></td>
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a></td>
 </tr>
 <tr class="even">
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></td>
-<td align="center"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></td>
 </tr>
 </tbody>
 </table>
