--- a/content/courses/ekonomi/3-exams-ps.html
+++ b/content/courses/ekonomi/3-exams-ps.html
@@ -21,29 +21,45 @@ weight: 40
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz sayfada 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
 {{% /alert %}}</p>
 <div id="ödevler" class="section level2">
 <h2>Ödevler</h2>
 <ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🔥
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> ⛔</li>
+<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷⛔</li>
 </ul></li>
 </ul>
 </div>
 <div id="sınavlar" class="section level2">
 <h2>Sınavlar</h2>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Türkçe 🇹🇷</th>
+<th align="left">İngilizce 🇺🇸</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Midterm%20Exam%20Review%20(Kara).pdf">Midterm Exam - Review</a></td>
+</tr>
+<tr class="even">
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Final%20Exam%20Review%20(Kara).pdf">Final Exam - Review</a></td>
+</tr>
+</tbody>
+</table>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a></li>
-<li><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a></li>
-<li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🔥
+<li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> ⛔</li>
+<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
 </ul></li>
-<li><a href="">CANVAS’ta Online Yazılı Sınav Nasıl Yapılır?</a> 🔥
+<li><a href="">CANVAS’ta Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’de Online Yazılı Sınav Nasıl Yapılır?</a> ⛔</li>
+<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’de Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
 </ul></li>
 </ul>
 </div>
