maın course setup

--- a/content/courses/economics/2-links.html
+++ b/content/courses/economics/2-links.html
@@ -29,9 +29,9 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonomi - Ders Videoları (YouTube Playlist)</a> 🇹🇷
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Ders Videos (YouTube Playlist)</a> 🇺🇸🔥</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> 🇺🇸🔥
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
 </ul></li>
