--- a/content/courses/ekonomi-i/2-links.html
+++ b/content/courses/ekonomi-i/2-links.html
@@ -20,9 +20,40 @@ weight: 30
 
 
 <p><br></p>
-<div id="ekonomiye-giris-i" class="section level2">
-<h2>Ekonomiye Giris I</h2>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
+<div id="akademi-ekonometri" class="section level2">
+<h2>Akademi Ekonometri</h2>
+<ul>
+<li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY">Ekonomiye Giriş I - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk1pV06IkB0XzLXldjhRfUs">Ekonomiye Giriş I - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+</ul></li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a><a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> 🇺🇸🔥</li>
+</ul>
 </div>
-<div id="links" class="section level2">
-<h2>Links</h2>
+<div id="online-ders" class="section level2">
+<h2>Online-Ders</h2>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
+</ul></li>
+</ul>
+</div>
+<div id="diğer-linkler" class="section level2">
+<h2>Diğer Linkler</h2>
+<ul>
+<li><a href="https://yokdersleri.yok.gov.tr/">YÖK Dersleri Platformu</a> 🇹🇷</li>
+<li><a href="https://acikders.tuba.gov.tr/">TÜBA Açık Ders Malzemeleri Portalı</a> 🇹🇷</li>
+</ul>
+</div>
+<div class="footnotes">
+<hr />
+<ol>
+<li id="fn1"><p>Only the first seven weeks are relevant to this course.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
