--- a/content/courses/ekonomi/1-documents.html
+++ b/content/courses/ekonomi/1-documents.html
@@ -21,5 +21,5 @@ weight: 20
 
 <p><br></p>
 <p>{{% alert note %}}
-İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Sizi ilgilendiren önemli dokümanlara bu sayfada sol tarafta bulunan bölümünüze ait linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere sol taraftaki taraftaki linklere tıklayarak ulaşabilirsiniz…
+İncelediğiniz ders birden farklı bölüme veriliyor olabilir. Sizi ilgilendiren önemli dokümanlara bu sayfanın sol tarafında bulunan bölümünüze ait linkten ulaşabilirsiniz. Ayrıca diğer doküman, link, video ve bilgilere sol taraftaki taraftaki linklere tıklayarak ulaşabilirsiniz…
 {{% /alert %}}</p>
