--- a/content/courses/ekonomi-i/01-st.html
+++ b/content/courses/ekonomi-i/01-st.html
@@ -20,6 +20,9 @@ weight: 21
 
 
 <p><br></p>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
 <div id="telegram-kanalı" class="section level2">
 <h2>Telegram Kanalı</h2>
 <p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
@@ -31,9 +34,8 @@ weight: 21
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a><br />
-</li>
-<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></li>
+<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</li>
+<li><a href="../../../repo/akek/courses/ekonomi-i/ST/Ekonomiye%20Giris_I%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔄</li>
 </ul>
 </div>
 <div id="ders-kitabı" class="section level2">
