--- a/content/courses/ekonomi/02-ie.html
+++ b/content/courses/ekonomi/02-ie.html
@@ -20,6 +20,9 @@ weight: 22
 
 
 <p><br></p>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
 <div id="telegram-kanalı" class="section level2">
 <h2>Telegram Kanalı</h2>
 <p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
@@ -39,12 +42,12 @@ weight: 22
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a></td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔄</td>
 </tr>
 </tbody>
 </table>
