--- a/content/courses/economics/02-ee.html
+++ b/content/courses/economics/02-ee.html
@@ -20,6 +20,9 @@ weight: 22
 
 
 <p><br></p>
+<p>{{% alert note %}}
+On the page you are reviewing, the icons and the contents they refer are as follows: 🇹🇷 <font color="red"><strong>Turkish</strong></font>, 🇺🇸 <font color="red"><strong>English</strong></font>, 🔄 <font color="red"><strong>Will be Updated</strong></font>, 🔥 <font color="red"><strong>In Progress</strong></font>, and ⛔ <font color="red"><strong>No Longer Valid</strong></font>.
+{{% /alert %}}</p>
 <div id="telegram-channel" class="section level2">
 <h2>Telegram Channel</h2>
 <p>To inform you about the important announcements related to the course on time, an announcement channel is created in the <a href="https://telegram.org/">Telegram</a> app. The detailed information can be found on documents below.</p>
@@ -39,12 +42,12 @@ weight: 22
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Syllabus%20(Kara).pdf">Syllabus</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Syllabus%20(Kara).pdf">Syllabus</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🔄</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🔄</td>
 </tr>
 </tbody>
 </table>
