--- a/content/courses/ekonometri-i/01-ec.html
+++ b/content/courses/ekonometri-i/01-ec.html
@@ -20,6 +20,9 @@ weight: 21
 
 
 <p><br></p>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
 <div id="telegram-kanalı" class="section level2">
 <h2>Telegram Kanalı</h2>
 <p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
@@ -30,10 +33,24 @@ weight: 21
 </div>
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
-<ul>
-<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı - 1. Öğretim</a></li>
-<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı - 2. Öğretim</a></li>
-</ul>
+<table>
+<thead>
+<tr class="header">
+<th align="left">1. Öğretim</th>
+<th align="left">2. Öğretim</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</td>
+</tr>
+<tr class="even">
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔥</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="ders-kitabı" class="section level2">
 <h2>Ders Kitabı</h2>
