--- a/content/courses/ekonometri-i/2-links.html
+++ b/content/courses/ekonometri-i/2-links.html
@@ -10,19 +10,43 @@ type: docs
 menu:
   ekonometri-i:
     parent: 
-    weight: 40
+    weight: 30
 
 # Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
-weight: 40
+weight: 30
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
-<div id="ekonometri-i" class="section level2">
-<h2>Ekonometri I</h2>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
+<div id="akademi-ekonometri" class="section level2">
+<h2>Akademi Ekonometri</h2>
+<ul>
+<li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonometri I - Ders Videoları (YouTube Playlist)</a> 🇹🇷
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonometri I - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+</ul></li>
+</ul>
 </div>
-<div id="links" class="section level2">
-<h2>Links</h2>
+<div id="online-ders" class="section level2">
+<h2>Online-Ders</h2>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
+</ul></li>
+</ul>
+</div>
+<div id="diğer-linkler" class="section level2">
+<h2>Diğer Linkler</h2>
+<ul>
+<li><a href="https://yokdersleri.yok.gov.tr/">YÖK Dersleri Platformu</a> 🇹🇷</li>
+<li><a href="https://acikders.tuba.gov.tr/">TÜBA Açık Ders Malzemeleri Portalı</a> 🇹🇷</li>
+</ul>
 </div>
