--- a/content/courses/economics/01-ce.html
+++ b/content/courses/economics/01-ce.html
@@ -27,27 +27,27 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <h2>Telegram Channel</h2>
 <p>To inform you about the important announcements related to the course on time, an announcement channel is created in the <a href="https://telegram.org/">Telegram</a> app. The detailed information can be found on documents below.</p>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Info.pdf">Telegram Channel Announcement</a></li>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Flyer.pdf">QR Code - For Phones</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Info.pdf">Telegram Channel Announcement</a> 🇺🇸</li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_Telegram%20Channel%20Announcement_Flyer.pdf">QR Code - For Phones</a> 🇺🇸</li>
 </ul>
 </div>
 <div id="syllabus-and-important-dates" class="section level2">
 <h2>Syllabus and Important Dates</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🔄</li>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🔄</li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸 🔄</li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸 🔄</li>
 </ul>
 </div>
 <div id="course-book" class="section level2">
 <h2>Course Book</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/Economics_Book%20Selection%20Explanation.pdf">Book Selection Explanation</a></li>
+<li><a href="../../../repo/akek/courses/economics/Economics_Book%20Selection%20Explanation.pdf">Book Selection Explanation</a> 🇺🇸</li>
 </ul>
 </div>
 <div id="course-evaluation-survey" class="section level2">
 <h2>Course Evaluation Survey</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics_Course%20Evaluation%20Survey.pdf">Course Evaluation Survey - Explanation (in Turkish)</a></li>
-<li><a href="https://forms.gle/ZfxYYKNxbVcyLaQB8">Course Evaluation Survey - Link (in Turkish)</a></li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_Course%20Evaluation%20Survey.pdf">Course Evaluation Survey - Explanation</a> 🇹🇷</li>
+<li><a href="https://forms.gle/ZfxYYKNxbVcyLaQB8">Course Evaluation Survey - Link</a> 🇹🇷</li>
 </ul>
 </div>
