--- a/content/courses/ekonomi-i/2-links.html
+++ b/content/courses/ekonomi-i/2-links.html
@@ -31,7 +31,10 @@ weight: 30
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk1pV06IkB0XzLXldjhRfUs">Ekonomiye Giriş I - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a><a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> 🇺🇸🔥</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> <a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> 🇺🇸🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
+</ul></li>
 </ul>
 </div>
 <div id="online-ders" class="section level2">
