--- a/content/courses/ekonomi/02-ie.html
+++ b/content/courses/ekonomi/02-ie.html
@@ -27,8 +27,8 @@ weight: 22
 <h2>Telegram Kanalı</h2>
 <p>Dersle ilgili önemli duyurulardan zamanında haberdar olabilmeniz için <a href="https://telegram.org/">Telegram</a> adlı uygulama içinde haberleşme kanalı oluşturulmuştur. Detaylı bilgiye aşağıdaki dokümanlardan ulaşabilirsiniz.</p>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_Telegram%20Kanali%20Duyurusu_Bilgilendirme.pdf">Telegram Kanalı Duyurusu</a></li>
-<li><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_Telegram%20Kanali%20Duyurusu_Ilan.pdf">QR Kod - Telefon İçin</a></li>
+<li><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_Telegram%20Kanali%20Duyurusu_Bilgilendirme.pdf">Telegram Kanalı Duyurusu</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_Telegram%20Kanali%20Duyurusu_Ilan.pdf">QR Kod - Telefon İçin</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="ders-planı-ve-önemli-günler" class="section level2">
@@ -42,12 +42,12 @@ weight: 22
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷 🔄</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷 🔄</td>
 </tr>
 </tbody>
 </table>
@@ -55,13 +55,13 @@ weight: 22
 <div id="ders-kitabı" class="section level2">
 <h2>Ders Kitabı</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi/Ekonomi_Kitap%20Secimi%20Aciklamasi%20(Kara).pdf">Kitap Seçimi Açıklaması</a></li>
+<li><a href="../../../repo/akek/courses/ekonomi/Ekonomi_Kitap%20Secimi%20Aciklamasi%20(Kara).pdf">Kitap Seçimi Açıklaması</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="ders-değerlendirme-anketi" class="section level2">
 <h2>Ders Değerlendirme Anketi</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_Ders%20Degerlendirme%20Anketi.pdf">Ders Değerlendirme Anketi - Açıklama</a></li>
-<li><a href="https://forms.gle/CVsdVSfWUKiWVMjh8">Ders Değerlendirme Anketi - Link</a></li>
+<li><a href="../../../repo/akek/courses/ekonomi/IE/Ekonomi_Ders%20Degerlendirme%20Anketi.pdf">Ders Değerlendirme Anketi - Açıklama</a> 🇹🇷</li>
+<li><a href="https://forms.gle/CVsdVSfWUKiWVMjh8">Ders Değerlendirme Anketi - Link</a> 🇹🇷</li>
 </ul>
 </div>
