--- a/content/courses/ekonomi/4-lectures.html
+++ b/content/courses/ekonomi/4-lectures.html
@@ -29,7 +29,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -66,7 +66,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -99,7 +99,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -140,7 +140,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -177,7 +177,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -226,7 +226,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -267,7 +267,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -304,7 +304,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -337,7 +337,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
@@ -378,7 +378,7 @@ weight: 50
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
-<th align="left">İngilizce 🇺🇸</th>
+<th align="left">English 🇺🇸</th>
 </tr>
 </thead>
 <tbody>
