--- a/content/courses/economics/2-links-docs.html
+++ b/content/courses/economics/2-links-docs.html
@@ -1,6 +1,6 @@
 ---
-title: Important Links
-linktitle: Links
+title: Important Links and Other Documents
+linktitle: Links and Other Documents
 date: "2020-10-05"
 lastmod: "2020-10-13"
 draft: false
@@ -29,21 +29,27 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonomi - Ders Videoları (YouTube Playlist)</a> 🇹🇷
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷 🔄</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> 🇺🇸🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> 🇺🇸 🔥
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸 🔄</li>
 </ul></li>
+</ul>
+</div>
+<div id="other-documents" class="section level2">
+<h2>Other Documents</h2>
+<ul>
+<li>🔥</li>
 </ul>
 </div>
 <div id="online-class" class="section level2">
 <h2>Online-Class</h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷 🔥
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷 ⛔</li>
 </ul></li>
 </ul>
 </div>
