--- a/content/courses/ekonomi/2-links-docs.html
+++ b/content/courses/ekonomi/2-links-docs.html
@@ -1,6 +1,6 @@
 ---
-title: Önemli Linkler
-linktitle: Linkler
+title: Önemli Link ve Diğer Dokümanlar
+linktitle: Link ve Diğer Dokümanlar
 date: "2020-10-05"
 lastmod: "2020-10-13"
 draft: false
@@ -8,7 +8,7 @@ draft: false
 type: docs
 
 menu:
-  ekonomi-i:
+  ekonomi:
     parent: 
     weight: 30
 
@@ -27,23 +27,29 @@ weight: 30
 <h2>Akademi Ekonometri</h2>
 <ul>
 <li><a href="https://www.youtube.com/c/AkademiEkonometri">Akademi Ekonometri - YouTube Kanalı</a> 🇹🇷</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlq2gXhN8biIYvYR4cyJPYY">Ekonomiye Giriş I - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitn_vnaxzj2qx18n5f4P7qch">Ekonomi - Ders Videoları (YouTube Playlist)</a> 🇹🇷
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk1pV06IkB0XzLXldjhRfUs">Ekonomiye Giriş I - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitl0xLk-Ms8skA_uAHTS9H-f">Ekonomi - Online-Ders (YouTube Playlist)</a> 🇹🇷 🔄</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> <a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> 🇺🇸🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlXmYoB4LUc2dnnI1OPAhHg">Economics - Course Videos (YouTube Playlist)</a> 🇺🇸 🔥
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸 🔄</li>
 </ul></li>
+</ul>
+</div>
+<div id="diğer-dokümanlar" class="section level2">
+<h2>Diğer Dokümanlar</h2>
+<ul>
+<li>🔥</li>
 </ul>
 </div>
 <div id="online-ders" class="section level2">
 <h2>Online-Ders</h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷 🔥
 <ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷 ⛔</li>
 </ul></li>
 </ul>
 </div>
@@ -53,10 +59,4 @@ weight: 30
 <li><a href="https://yokdersleri.yok.gov.tr/">YÖK Dersleri Platformu</a> 🇹🇷</li>
 <li><a href="https://acikders.tuba.gov.tr/">TÜBA Açık Ders Malzemeleri Portalı</a> 🇹🇷</li>
 </ul>
-</div>
-<div class="footnotes">
-<hr />
-<ol>
-<li id="fn1"><p>Only the first seven weeks are relevant to this course.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
-</ol>
 </div>
